[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Images/Animals/Duck/duck3.tres" type="SpriteFrames" id=1]
[ext_resource path="res://World/Animals/Duck.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/Flash.tres" type="Material" id=3]
[ext_resource path="res://Assets/Images/Magic/lightning/Shock_Small.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=24]
radius = 5.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 15.0
height = 6.0

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=26]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("DuckSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Electricity:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PoisonParticles/P1:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PoisonParticles/P2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PoisonParticles/P3:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=27]
resource_name = "hit"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 216, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 264, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 312, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Duck" type="KinematicBody2D"]
material = ExtResource( 3 )
collision_mask = 3
script = ExtResource( 2 )

[node name="PoisonParticles" type="Node2D" parent="."]
position = Vector2( 0, -10 )

[node name="P3" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 12, 4 )
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0, 0.332031, 0, 1 )

[node name="P2" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 32, 4 )
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0.145098, 0.545098, 0.145098, 1 )

[node name="P1" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 32, 4 )
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0.14902, 0.937255, 0.14902, 1 )

[node name="DuckSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
position = Vector2( 0, -30 )
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 24 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0, -3 )
collision_layer = 262400
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource( 25 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 4.16875, 4.16875 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 100.0
target_desired_distance = 100.0
avoidance_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 28 )
anims/death = SubResource( 26 )
anims/hit = SubResource( 27 )

[node name="Electricity" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1.22, 1.22, 1.22, 1 )
position = Vector2( 0, -15 )
scale = Vector2( 2, 2 )
frames = SubResource( 35 )
frame = 1
playing = true

[node name="Timers" type="Node" parent="."]

[node name="RunStateTimer" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="Timer" type="Timer" parent="Timers"]
autostart = true

[node name="FrozenTimer" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="StunnedTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="PoisonTimer" type="Timer" parent="Timers"]
wait_time = 8.0
one_shot = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timers/RunStateTimer" to="." method="_on_RunStateTimer_timeout"]
[connection signal="timeout" from="Timers/FrozenTimer" to="." method="_on_FrozenTimer_timeout"]
[connection signal="timeout" from="Timers/StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
[connection signal="timeout" from="Timers/PoisonTimer" to="." method="_on_PoisonTimer_timeout"]
